# dicenotation-rs

./: .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  README.md  appveyor.yml  build.rs  index.html  search-index.js
.github/workflows/: ci.yml
ci/: before_deploy.ps1  before_deploy.sh
dicenotation/: Cargo.toml  DiceData.t.html  fn.roll_dice.html  index.html  roll_dice.v.html  sidebar-items.js  struct.DiceData.html
dicenotation-ffi/: Cargo.toml  build.rs
dicenotation-ffi/src/: lib.rs
dicenotation/src/: lib.rs
dicenotation/src/parsing/: mod.rs  test.rs
dicenotation/src/rolling/: mod.rs  test.rs
diceroller/: Cargo.toml
diceroller/src/: main.rs
examples/: roll.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/iter/iterator/: trait.Iterator.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
implementors/std/error/: trait.Error.js
src/: ffi.rs  lib.rs
src/dicenotation/: lib.rs.html
src/dicenotation/parsing/: mod.rs.html
src/dicenotation/rolling/: mod.rs.html
src/parsing/: mod.rs  test.rs
src/regex/: backtrack.rs.html  compile.rs.html  dfa.rs.html  error.rs.html  exec.rs.html  expand.rs.html  freqs.rs.html  input.rs.html  lib.rs.html  pikevm.rs.html  prog.rs.html  re_builder.rs.html  re_bytes.rs.html  re_set.rs.html  re_trait.rs.html  re_unicode.rs.html  sparse.rs.html  utf8.rs.html
src/regex/literal/: mod.rs.html
src/regex/literal/teddy_avx2/: fallback.rs.html  mod.rs.html
src/regex/literal/teddy_ssse3/: fallback.rs.html  mod.rs.html
src/regex_syntax/: either.rs.html  error.rs.html  lib.rs.html  parser.rs.html  unicode.rs.html
src/regex_syntax/ast/: mod.rs.html  parse.rs.html  print.rs.html  visitor.rs.html
src/regex_syntax/hir/: interval.rs.html  mod.rs.html  print.rs.html  translate.rs.html  visitor.rs.html
src/regex_syntax/hir/literal/: mod.rs.html
src/regex_syntax/unicode_tables/: age.rs.html  case_folding_simple.rs.html  general_category.rs.html  mod.rs.html  perl_word.rs.html  property_bool.rs.html  property_names.rs.html  property_values.rs.html  script.rs.html  script_extension.rs.html
src/rolling/: mod.rs
