[package]
name = "dicenotation"
version = "0.2.0"
authors = ["Mattias Cibien <mattias@mattiascibien.net>"]
license = "MIT/Apache-2.0"

description = "Standard Dice Notation (parsing and die rolling) for Rust"
readme = "README.md"
documentation = "https://docs.rs/dicenotation"
repository = "https://github.com/mattiascibien/dicenotation-rs"
keywords = ["dice", "rng", "dice-notation"]


[dependencies]
lazy_static = "1.0"
regex = "0.2"
rand = "0.4"
num-traits = "0.2"
num-iter = "0.1"

[dev-dependencies]
clap = "2.31"
